--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,11 +8,19 @@ services:
       - "8002:8002"
     environment:
       - USING_DOCKER_COMPOSE=1
+    depends_on:
+      - factory
+      - delivery
+    links: 
+      - factory
+      - delivery
+    restart: on-failure
 
   delivery:
     build: ./delivery-module
     ports:
       - "8003:8003"
+    restart: on-failure
     environment:
       - USING_DOCKER_COMPOSE=1
 
@@ -22,10 +30,4 @@ services:
       - "8001:8001"
     environment:
       - USING_DOCKER_COMPOSE=1
-    depends_on:
-      - aggregator
-      - delivery
     restart: on-failure
-    links: 
-      - aggregator
-      - delivery
